--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-      <title>HAPPY BIRTHDAY Titir 2021!</title>
+      <title>Happy Birthday Titir 2021!</title>
 
       <!-- Fonts -->
       <link href="https://fonts.googleapis.com/css?family=Do+Hyeon|Open+Sans|Pacifico|Indie+Flower|Great+Vibes" rel="stylesheet">
@@ -40,14 +40,14 @@
                 <div id ="chat2" class="left" style="float: left; display: inline">
                   <h3 class="h3-left pl-5 pr-4
                   pt-2 pb-2" style=" font-family: 'Pacifico', cursive;">Assalamuyalaikum...<span></span></h3>
-                  <span><img class="faceIcon" style="float:left;" src="img/photos/icon/icon3.jpg"></span>
+                  <span><img class="faceIcon" style="float:left;" src="img/photos/icon/icon3.JPG"></span>
                 </div>
               </div>
               <div class="col-lg-12 col-md-12 col-sm-12 mb-4">
                 <div id ="chat5" class="right" style="float: right; display: inline;">
                   <h3 class="h3-right pl-4 pr-5
                   pt-2 pb-2" style=" font-family:'Pacifico', cursive;">Woyalaikum Salaum...</h3>
-                  <span><img class="faceIcon" style="float: right;" src="img/photos/icon/icon1.jpg" alt=""></span>
+                  <span><img class="faceIcon" style="float: right;" src="img/photos/icon/icon1.JPG" alt=""></span>
                 </div>
               </div>
 
@@ -55,21 +55,21 @@
                 <div id ="chat2" class="left" style="float: left; display: inline">
                   <h3 class="h3-left pl-5 pr-4
                   pt-2 pb-2" style=" font-family: 'Pacifico', cursive;">Happy Birthday, Sanaul.... <span><i class="em em-cake"></i><span></span></h3>
-                  <span><img class="faceIcon" style="float:left;" src="img/photos/icon/icon3.jpg"></span>
+                  <span><img class="faceIcon" style="float:left;" src="img/photos/icon/icon3.JPG"></span>
                 </div>
               </div>
               <div class="col-lg-12 col-md-12 col-sm-12 mb-4">
                 <div id ="chat5" class="right" style="float: right; display: inline;">
                   <h3 class="h3-right pl-4 pr-5
                   pt-2 pb-2" style=" font-family:'Pacifico', cursive;">Thank you so much...<span><i class="em-svg em-heart"></i></span></h3>
-                  <span><img class="faceIcon" style="float: right;" src="img/photos/icon/icon1.jpg" alt=""></span>
+                  <span><img class="faceIcon" style="float: right;" src="img/photos/icon/icon1.JPG" alt=""></span>
                 </div>
               </div>
                <div class="col-lg-12 col-md-12 col-sm-12 mb-4">
                 <div id ="chat2" class="left" style="float: left; display: inline">
                   <h3 class="h3-left pl-5 pr-4
                   pt-2 pb-2" style=" font-family: 'Pacifico', cursive;">Your're Welcome...<span></span></h3>
-                  <span><img class="faceIcon" style="float:left;" src="img/photos/icon/icon3.jpg"></span>
+                  <span><img class="faceIcon" style="float:left;" src="img/photos/icon/icon3.JPG"></span>
                 </div>
               </div>
              
@@ -79,7 +79,7 @@
                 <div id="chat1" class="right" style="float: right; display: inline">
                   <h3 class="h3-right pl-4 pr-5
                   pt-2 pb-2" style=" font-family:'Pacifico', cursive;">Assalamuyalaikum!</h3>
-                  <span><img class="faceIcon" src="img/photos/icon/icon1.jpg"></span>
+                  <span><img class="faceIcon" src="img/photos/icon/icon1.JPG"></span>
                 </div>
               </div>
 
@@ -87,7 +87,7 @@
                 <div id ="chat2" class="left" style="float: left; display: inline">
                   <h3 class="h3-left pl-5 pr-4
                   pt-2 pb-2" style=" font-family: 'Pacifico', cursive;">Woyalaikum Salam...<span></span></h3>
-                  <span><img class="faceIcon" style="float:left;" src="img/photos/icon/icon3.jpg"></span>
+                  <span><img class="faceIcon" style="float:left;" src="img/photos/icon/icon3.JPG"></span>
                 </div>
               </div>
 
@@ -95,7 +95,7 @@
                 <div id ="chat3" class="right" style="float: right; display: inline;">
                   <h3 class="h3-right pl-4 pr-5
                   pt-2 pb-2" style=" font-family:'Pacifico', cursive;overflow-y: hidden;">Happy Birthday once... <span><i class="em em-cake"></i></span></h3>
-                  <span><img class="faceIcon" style="float: right;" src="img/photos/icon/icon1.jpg" alt=""></span>
+                  <span><img class="faceIcon" style="float: right;" src="img/photos/icon/icon1.JPG" alt=""></span>
                 </div>
               </div>
 
@@ -103,7 +103,7 @@
                 <div id ="chat4" class="left" style="float: left; display: inline">
                   <h3 class="h3-left pl-5 pr-4
                   pt-2 pb-2" style=" font-family: 'Pacifico', cursive;overflow-y: hidden;">thank you so much <span><i class="em em-blush"></i></span></h3>
-                  <span><img class="faceIcon" style="float:left;" src="img/photos/icon/icon3.jpg"></span>
+                  <span><img class="faceIcon" style="float:left;" src="img/photos/icon/icon3.JPG"></span>
                 </div>
               </div>
 
@@ -111,7 +111,7 @@
                 <div id ="chat5" class="right" style="float: right; display: inline;">
                   <h3 class="h3-right pl-4 pr-5
                   pt-2 pb-2" style=" font-family:'Pacifico', cursive;">That's not it...</h3>
-                  <span><img class="faceIcon" style="float: right;" src="img/photos/icon/icon1.jpg" alt=""></span>
+                  <span><img class="faceIcon" style="float: right;" src="img/photos/icon/icon1.JPG" alt=""></span>
                 </div>
               </div>
 
@@ -119,7 +119,7 @@
                 <div id ="chat6" class="left" style="float: left; display: inline">
                   <h3 class="h3-left pl-5 pr-4
                   pt-2 pb-2" style=" font-family: 'Pacifico', cursive;">then?<span></span></h3>
-                  <span><img class="faceIcon" style="float:left;" src="img/photos/icon/icon3.jpg"></span>
+                  <span><img class="faceIcon" style="float:left;" src="img/photos/icon/icon3.JPG"></span>
                 </div>
               </div>
 
@@ -128,7 +128,7 @@
                 <div id ="chat7" class="right" style="float: right;">
                   <h3 class="h3-right pl-4 pr-5
                   pt-2 pb-2" style=" font-family:'Pacifico', cursive;">I've made this page for you on your special day...</h3>
-                  <span><img class="faceIcon" src="img/photos/icon/icon1.jpg" alt=""></span>
+                  <span><img class="faceIcon" src="img/photos/icon/icon1.JPG" alt=""></span>
                 </div>
               </div>
             </div>
@@ -159,46 +159,46 @@
               </ol>
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img class="d-block photo-size img-fluid m-auto" src="img\photos\amazingYou\img2.jpg" alt="First slide">
+                  <img class="d-block photo-size img-fluid m-auto" src="img\photos\amazingYou\img2.JPG" alt="First slide">
                   <div class="carousel-caption d-none d-md-block">
                     <p></p>
                   </div>
                 </div>
                 <div class="carousel-item" >
-                  <img class="d-block photo-size img-fluid m-auto" src="img\photos\amazingYou\img3.jpg" alt="Second slide">
+                  <img class="d-block photo-size img-fluid m-auto" src="img\photos\amazingYou\img3.JPG" alt="Second slide">
                   <div class="carousel-caption d-none d-md-block">
                     <p></p>
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img class="d-block photo-size img-fluid m-auto" src="img\photos\amazingYou\img1.jpg" alt="Third slide">
+                  <img class="d-block photo-size img-fluid m-auto" src="img\photos\amazingYou\img1.JPG" alt="Third slide">
                 </div>
                 <div class="carousel-item" >
-                  <img class="d-block photo-size img-fluid m-auto" src="img\photos\amazingYou\img4.jpg" alt="Fourth slide">
+                  <img class="d-block photo-size img-fluid m-auto" src="img\photos\amazingYou\img4.JPG" alt="Fourth slide">
                   <div class="carousel-caption d-none d-md-block">
                     <p></p>
                   </div>
                 </div>
                 <div class="carousel-item" >
-                  <img class="d-block photo-size img-fluid m-auto" src="img\photos\amazingYou\img5.jpg" alt="Fifth slide">
+                  <img class="d-block photo-size img-fluid m-auto" src="img\photos\amazingYou\img5.JPG" alt="Fifth slide">
                   <div class="carousel-caption d-none d-md-block">
                     <p></p>
                   </div>
                 </div>
                 <div class="carousel-item" >
-                  <img class="d-block photo-size img-fluid m-auto" src="img\photos\amazingYou\img6.jpg" alt="Sixth slide">
+                  <img class="d-block photo-size img-fluid m-auto" src="img\photos\amazingYou\img6.JPG" alt="Sixth slide">
                   <div class="carousel-caption d-none d-md-block">
                     <p></p>
                   </div>
                 </div>
                 <div class="carousel-item" >
-                  <img class="d-block photo-size img-fluid m-auto" src="img\photos\amazingYou\img7.jpg" alt="Seventh slide">
+                  <img class="d-block photo-size img-fluid m-auto" src="img\photos\amazingYou\img7.JPG" alt="Seventh slide">
                   <div class="carousel-caption d-none d-md-block">
                     <p></p>
                   </div>
                 </div>
                 <div class="carousel-item" >
-                  <img class="d-block photo-size img-fluid m-auto" src="img\photos\amazingYou\img8.jpg" alt="Eight slide">
+                  <img class="d-block photo-size img-fluid m-auto" src="img\photos\amazingYou\img8.JPG" alt="Eight slide">
                   <div class="carousel-caption d-none d-md-block">
                     <p></p>
                   </div>
@@ -238,22 +238,22 @@
               </ol>
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img class="d-block photo-size img-fluid m-auto" src="img\photos\Family\img1.jpg" alt="First slide">
+                  <img class="d-block photo-size img-fluid m-auto" src="img\photos\Family\img1.JPG" alt="First slide">
                   <div class="carousel-caption d-none d-md-block">
                     <p></p>
                   </div>
                 </div>
                 <div class="carousel-item" >
-                  <img style="-webkit-filter: grayscale(100%);filter: grayscale(100%);" class="d-block photo-size img-fluid m-auto" src="img\photos\Family\img3.jpg" alt="Second slide">
+                  <img style="-webkit-filter: grayscale(100%);filter: grayscale(100%);" class="d-block photo-size img-fluid m-auto" src="img\photos\Family\img3.JPG" alt="Second slide">
                   <div class="carousel-caption d-none d-md-block">
                     <p></p>
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img style="-webkit-filter: grayscale(100%); filter: grayscale(100%);" class="d-block photo-size img-fluid m-auto" src="img\photos\Family\img2.jpg" alt="Third slide">
+                  <img style="-webkit-filter: grayscale(100%); filter: grayscale(100%);" class="d-block photo-size img-fluid m-auto" src="img\photos\Family\img2.JPG" alt="Third slide">
                 </div>
                 <div class="carousel-item" >
-                  <img class="d-block photo-size img-fluid m-auto" src="img\photos\Family\img4.jpg" alt="Fourth slide">
+                  <img class="d-block photo-size img-fluid m-auto" src="img\photos\Family\img4.JPG" alt="Fourth slide">
                   <div class="carousel-caption d-none d-md-block">
                     <p></p>
                   </div>
@@ -298,40 +298,40 @@
               </ol>
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img class="d-block photo-size img-fluid m-auto" src="img\photos\Kids\img2.jpg" alt="First slide">
+                  <img class="d-block photo-size img-fluid m-auto" src="img\photos\Kids\img2.JPG" alt="First slide">
                   <div class="carousel-caption d-none d-md-block">
                     <p></p>
                   </div>
                 </div>
                 <div class="carousel-item" >
-                  <img class="d-block photo-size img-fluid m-auto" src="img\photos\Kids\img3.jpg" alt="Second slide">
+                  <img class="d-block photo-size img-fluid m-auto" src="img\photos\Kids\img3.JPG" alt="Second slide">
                   <div class="carousel-caption d-none d-md-block">
                     <p></p>
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img class="d-block photo-size img-fluid m-auto" src="img\photos\Kids\img1.jpg" alt="Third slide">
+                  <img class="d-block photo-size img-fluid m-auto" src="img\photos\Kids\img1.JPG" alt="Third slide">
                 </div>
                 <div class="carousel-item" >
-                  <img class="d-block photo-size img-fluid m-auto" src="img\photos\Kids\img4.jpg" alt="Fourth slide">
+                  <img class="d-block photo-size img-fluid m-auto" src="img\photos\Kids\img4.JPG" alt="Fourth slide">
                   <div class="carousel-caption d-none d-md-block">
                     <p></p>
                   </div>
                 </div>
                 <div class="carousel-item" >
-                  <img class="d-block photo-size img-fluid m-auto" src="img\photos\Kids\img5.jpg" alt="Fifth slide">
+                  <img class="d-block photo-size img-fluid m-auto" src="img\photos\Kids\img5.JPG" alt="Fifth slide">
                   <div class="carousel-caption d-none d-md-block">
                     <p></p>
                   </div>
                 </div>
                 <div class="carousel-item" >
-                  <img class="d-block photo-size img-fluid m-auto" src="img\photos\Kids\img6.jpg" alt="Sixth slide">
+                  <img class="d-block photo-size img-fluid m-auto" src="img\photos\Kids\img6.JPG" alt="Sixth slide">
                   <div class="carousel-caption d-none d-md-block">
                     <p></p>
                   </div>
                 </div>
                 <div class="carousel-item" >
-                  <img class="d-block photo-size img-fluid m-auto" src="img\photos\Kids\img7.jpg" alt="Seventh slide">
+                  <img class="d-block photo-size img-fluid m-auto" src="img\photos\Kids\img7.JPG" alt="Seventh slide">
                   <div class="carousel-caption d-none d-md-block">
                     <p></p>
                   </div>
