--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
               <div class="col-lg-12 col-md-12 col-sm-12 mb-4">
                 <div id ="chat2" class="left" style="float: left; display: inline">
                   <h3 class="h3-left pl-5 pr-4
-                  pt-2 pb-2" style=" font-family: 'Pacifico', cursive;">Assalamuyalaikum...<span></span></h3>
+                  pt-2 pb-2" style=" font-family: 'Pacifico', cursive;">  Assalamuyalaikum...<span></span></h3>
                   <span><img class="faceIcon" style="float:left;" src="img/photos/icon/icon3.JPG"></span>
                 </div>
               </div>
               <div class="col-lg-12 col-md-12 col-sm-12 mb-4">
                 <div id ="chat5" class="right" style="float: right; display: inline;">
                   <h3 class="h3-right pl-4 pr-5
-                  pt-2 pb-2" style=" font-family:'Pacifico', cursive;">Woyalaikum Salaum...</h3>
+                  pt-2 pb-2" style=" font-family:'Pacifico', cursive;"> Woyalaikum Salam...</h3>
                   <span><img class="faceIcon" style="float: right;" src="img/photos/icon/icon1.JPG" alt=""></span>
                 </div>
               </div>
@@ -54,21 +54,21 @@
               <div class="col-lg-12 col-md-12 col-sm-12 mb-4">
                 <div id ="chat2" class="left" style="float: left; display: inline">
                   <h3 class="h3-left pl-5 pr-4
-                  pt-2 pb-2" style=" font-family: 'Pacifico', cursive;">Happy Birthday, Sanaul.... <span><i class="em em-cake"></i><span></span></h3>
+                  pt-2 pb-2" style=" font-family: 'Pacifico', cursive;"> Happy Birthday, Sanaul.... <span><i class="em em-cake"></i><span></span></h3>
                   <span><img class="faceIcon" style="float:left;" src="img/photos/icon/icon3.JPG"></span>
                 </div>
               </div>
               <div class="col-lg-12 col-md-12 col-sm-12 mb-4">
                 <div id ="chat5" class="right" style="float: right; display: inline;">
                   <h3 class="h3-right pl-4 pr-5
-                  pt-2 pb-2" style=" font-family:'Pacifico', cursive;">Thank you so much...<span><i class="em-svg em-heart"></i></span></h3>
+                  pt-2 pb-2" style=" font-family:'Pacifico', cursive;"> Thank you so much...<span><i class="em-svg em-heart"></i></span></h3>
                   <span><img class="faceIcon" style="float: right;" src="img/photos/icon/icon1.JPG" alt=""></span>
                 </div>
               </div>
                <div class="col-lg-12 col-md-12 col-sm-12 mb-4">
                 <div id ="chat2" class="left" style="float: left; display: inline">
                   <h3 class="h3-left pl-5 pr-4
-                  pt-2 pb-2" style=" font-family: 'Pacifico', cursive;">Your're Welcome...<span></span></h3>
+                  pt-2 pb-2" style=" font-family: 'Pacifico', cursive;"> Your're Welcome...<span></span></h3>
                   <span><img class="faceIcon" style="float:left;" src="img/photos/icon/icon3.JPG"></span>
                 </div>
               </div>
@@ -78,7 +78,7 @@
               <div class="col-lg-12 col-md-12 col-sm-12 mb-4">
                 <div id="chat1" class="right" style="float: right; display: inline">
                   <h3 class="h3-right pl-4 pr-5
-                  pt-2 pb-2" style=" font-family:'Pacifico', cursive;">Assalamuyalaikum!</h3>
+                  pt-2 pb-2" style=" font-family:'Pacifico', cursive;"> Assalamuyalaikum!</h3>
                   <span><img class="faceIcon" src="img/photos/icon/icon1.JPG"></span>
                 </div>
               </div>
@@ -86,7 +86,7 @@
               <div class="col-lg-12 col-md-12 col-sm-12 mb-4">
                 <div id ="chat2" class="left" style="float: left; display: inline">
                   <h3 class="h3-left pl-5 pr-4
-                  pt-2 pb-2" style=" font-family: 'Pacifico', cursive;">Woyalaikum Salam...<span></span></h3>
+                  pt-2 pb-2" style=" font-family: 'Pacifico', cursive;"> Woyalaikum Salam...<span></span></h3>
                   <span><img class="faceIcon" style="float:left;" src="img/photos/icon/icon3.JPG"></span>
                 </div>
               </div>
@@ -94,7 +94,7 @@
               <div class="col-lg-12 col-md-12 col-sm-12 mb-4">
                 <div id ="chat3" class="right" style="float: right; display: inline;">
                   <h3 class="h3-right pl-4 pr-5
-                  pt-2 pb-2" style=" font-family:'Pacifico', cursive;overflow-y: hidden;">Happy Birthday once... <span><i class="em em-cake"></i></span></h3>
+                  pt-2 pb-2" style=" font-family:'Pacifico', cursive;overflow-y: hidden;"> Happy Birthday once... <span><i class="em em-cake"></i></span></h3>
                   <span><img class="faceIcon" style="float: right;" src="img/photos/icon/icon1.JPG" alt=""></span>
                 </div>
               </div>
@@ -102,7 +102,7 @@
               <div class="col-lg-12 col-md-12 col-sm-12 mb-4">
                 <div id ="chat4" class="left" style="float: left; display: inline">
                   <h3 class="h3-left pl-5 pr-4
-                  pt-2 pb-2" style=" font-family: 'Pacifico', cursive;overflow-y: hidden;">thank you so much <span><i class="em em-blush"></i></span></h3>
+                  pt-2 pb-2" style=" font-family: 'Pacifico', cursive;overflow-y: hidden;"> thank you so much <span><i class="em em-blush"></i></span></h3>
                   <span><img class="faceIcon" style="float:left;" src="img/photos/icon/icon3.JPG"></span>
                 </div>
               </div>
@@ -110,7 +110,7 @@
               <div class="col-lg-12 col-md-12 col-sm-12 mb-4">
                 <div id ="chat5" class="right" style="float: right; display: inline;">
                   <h3 class="h3-right pl-4 pr-5
-                  pt-2 pb-2" style=" font-family:'Pacifico', cursive;">That's not it...</h3>
+                  pt-2 pb-2" style=" font-family:'Pacifico', cursive;"> That's not it...</h3>
                   <span><img class="faceIcon" style="float: right;" src="img/photos/icon/icon1.JPG" alt=""></span>
                 </div>
               </div>
@@ -118,7 +118,7 @@
               <div class="col-lg-12 col-md-12 col-sm-12 mb-4">
                 <div id ="chat6" class="left" style="float: left; display: inline">
                   <h3 class="h3-left pl-5 pr-4
-                  pt-2 pb-2" style=" font-family: 'Pacifico', cursive;">then?<span></span></h3>
+                  pt-2 pb-2" style=" font-family: 'Pacifico', cursive;"> then?<span></span></h3>
                   <span><img class="faceIcon" style="float:left;" src="img/photos/icon/icon3.JPG"></span>
                 </div>
               </div>
@@ -127,7 +127,7 @@
               <div class="col-lg-12 col-md-12 col-sm-12 mb-4">
                 <div id ="chat7" class="right" style="float: right;">
                   <h3 class="h3-right pl-4 pr-5
-                  pt-2 pb-2" style=" font-family:'Pacifico', cursive;">I've made this page for you on your special day...</h3>
+                  pt-2 pb-2" style=" font-family:'Pacifico', cursive;"> I've made this page for you on your special day...</h3>
                   <span><img class="faceIcon" src="img/photos/icon/icon1.JPG" alt=""></span>
                 </div>
               </div>
